# evoke

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: tests.yml
docs/examples/: godfreysmith2013communication.py  skyrms2010signals.py
docs/paper/: paper.bib  paper.md
docs/source/: api.rst  conf.py  examples.rst  index.rst  usage.rst
docs/tutorials/: Evoke Tutorial.ipynb  evoke Tutorial (Colab).url  evoke Tutorial.ipynb
docs/tutorials/quarto/: tutorial.html  tutorial.qmd
evoke/examples/: godfreysmith2013communication.py  skyrms2010signals.py
evoke/lib/: asymmetric_games.py  calculate.py  common_interest.py  evolve.py  exceptions.py  figure.py  game.py  info.py  symmetric_games.py
evoke/src/: asymmetric_games.py  calculate.py  common_interest.py  evolve.py  exceptions.py  figure.py  games.py  info.py  logger.py  symmetric_games.py
evoke/tests/: run_tests.py  test_evolve.py  test_figure.py  test_games.py  test_godfreysmith2013communication.py  test_info.py  test_skyrms2010signals.py
evoke/tutorial/: evoke_bibliography.bib  tutorial.html
skyrms/: asymmetric_games.py  evolve.py  figure.py  info.py  symmetric_games.py
tutorials/: Examples.ipynb
tutorials/jupyter/.ipynb_checkpoints/: Examples-checkpoint.ipynb  tutorial-checkpoint.ipynb
tutorials/quarto/: tutorial.qmd
