[tool.poetry]
name = "evoke-signals"
packages = [
    { include="evoke", from="." },
]
version = "0.1.2"
description = "Signalling games in python"
authors = [
		"Stephen Mann <stephenfmann@gmail.com>", 
		"Manolo Martínez <manolo@austrohungaro.com>"
]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">3.8,<3.12"
numpy = ">1.20"
scipy = "^1.10.1"
tqdm = ">4.50.1"
matplotlib = ">3.7.1"
python-ternary = ">1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
